# grappelli-safe

./: .gitattributes  .gitignore  .hgignore  .releaserc  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
grappelli_safe/: __init__.py  admin.py  settings.py  urls.py
grappelli_safe/locale/ar/LC_MESSAGES/: django.mo  django.po
grappelli_safe/locale/es/LC_MESSAGES/: django.mo  django.po
grappelli_safe/locale/nb/LC_MESSAGES/: django.mo  django.po
grappelli_safe/locale/pt_BR/LC_MESSAGES/: django.mo  (+1 more)
grappelli_safe/media/css/: base.css  typography.css  widgets.css
grappelli_safe/models/: __init__.py  bookmarks.py  help.py  navigation.py
grappelli_safe/templates/admin/: actions.html  app_index.html  base.html  change_form.html  change_list.html  change_list_results.html  delete_confirmation.html  delete_selected_confirmation.html  filter.html  index.html  login.html  object_history.html  pagination.html  search_form.html  submit_line.html  template_validator.html
grappelli_safe/templates/admin_doc/: bookmarklets.html  index.html  missing_docutils.html  model_detail.html  model_index.html  template_detail.html  template_filter_index.html  template_tag_index.html  view_detail.html  view_index.html
grappelli_safe/templates/registration/: password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
grappelli_safe/templatetags/: grp_csrf.py  grp_tags.py
grappelli_safe/views/: bookmarks.py  help.py
(+28 files in other folders)
