[metadata]
name = grappelli_safe
version = attr: grappelli_safe.__version__
description = A snapshot of the grappelli_2 branch of django-grappelli, packaged as a dependency for the Mezzanine CMS for Django.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Patrick Kranzlmueller, Axel Swoboda (vonautomatisch)
author_email = werkstaetten@vonautomatisch.at
maintainer = Stephen McDonald
maintainer_email = stephen.mc@gmail.com
url = http://github.com/stephenmcd/grappelli-safe
license_file = LICENSE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6, <3.9
packages = find:
include_package_data = true

# Building

[bdist_wheel]
universal = 1

# Testing

[tox:tox]
envlist =
    package

[testenv:package]
# Check package integrity and compatibility with PyPI
deps =
    twine
    check-manifest
skip_install = true
commands =
    python setup.py -q sdist --dist-dir="{envtmpdir}/dist"
    twine check "{envtmpdir}/dist/*"
    check-manifest --ignore-bad-ideas '*.mo' {toxinidir}

[gh-actions]
# Connect GitHub Action matrices with tox envs
python =
    3.8: package
